@@ -37,8 +37,9 @@ correct suite is specified.  The release code name has to be used
 .B --whitelist \fIfile\fP
 Change the name of the whitelist file.
 .TP
-.BR --add-whitelist ", " --remove-whitelist
-Add or remove entries from the whitelist.  See the
+.BR --add-whitelist ", " --remove-whitelist ", " --show-whitelist
+Add or remove entries from the whitelist, or print the whitelist to
+standard output.  See the
 .SM "CHANGING THE WHITELIST"
 section below.
 .TP
